--- a/home.html
+++ b/home.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20230317153027">
+	<link rel="stylesheet" href="css/style.min.css?_v=20230319163746">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,7 +14,7 @@
 
 <body>
 	<div class="wrapper">
-		<header class="header">
+		<header data-scroll="100" data-scroll-show="500" class="header">
 			<div class="header__container">
 				<div class="header__top top-header">
 					<a href="" class="top-header__logo"><img src="img/Logo.svg" alt="logo"></a>
@@ -63,14 +63,85 @@
 			</div>
 		</header>
 		<main class="page">
-
+			<div class="page__main main">
+				<div class="main__container">
+					<div class="main__image">
+						<picture><source srcset="img/main/main-photo.webp" type="image/webp"><img src="img/main/main-photo.jpg" alt="truck"></picture>
+					</div>
+					<div class="main__block">
+						<h1 class="main__title">Запчастини до вантажних автомобілів </h1>
+						<div class="main__subtitle">Перевірені запчастини з Європи</div>
+						<button type="submit" class="main__bnt button button--white">Каталог</button>
+					</div>
+				</div>
+				<div class="">Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt nobis quaerat beatae,
+					laboriosam eveniet, est nam molestiae fuga, ipsa recusandae sint maxime ex asperiores! Quaerat
+					consequatur soluta vel omnis temporibus!
+					Itaque quod reprehenderit molestiae dignissimos, iure in aliquid natus repellendus distinctio sapiente ab
+					exercitationem corrupti quas, placeat asperiores saepe. Natus quasi sit magnam sint, impedit est
+					temporibus fugit maxime expedita.
+					Voluptatibus facilis nobis veritatis eligendi eum, molestias itaque quaerat dignissimos distinctio?
+					Dolorem, quia. Perferendis nisi tempore, debitis culpa dolorum, nobis distinctio cupiditate labore
+					praesentium ad perspiciatis ipsam veritatis magnam nulla.
+					Excepturi officia laborum labore tempore exercitationem possimus eius veniam vel commodi. Error, dolorem
+					ab animi commodi pariatur rem nobis explicabo eligendi a necessitatibus ex distinctio exercitationem,
+					nemo vel sunt tempora.
+					Similique quo labore repellat et optio quis molestias qui dignissimos omnis perspiciatis aliquid atque
+					nobis, ea eius beatae consequatur dolorum amet velit. Laudantium inventore similique molestiae earum at
+					laboriosam voluptatem!
+					Voluptatem eveniet cumque quaerat exercitationem numquam aperiam cum minima, laboriosam beatae iste et
+					earum suscipit praesentium architecto doloremque? Quod a voluptatum at atque ad aliquid non laboriosam
+					aliquam nisi consectetur!
+					Nemo illum inventore vitae, eius, ipsa quaerat maxime quia reprehenderit veritatis itaque, optio
+					mollitia! Commodi debitis rem repellat sunt odit, veniam id repellendus voluptates consequuntur
+					distinctio, nobis rerum, quo amet.
+					Quasi rerum, amet est voluptate expedita earum deserunt ipsam nisi saepe explicabo, et possimus libero
+					animi, perspiciatis aliquid sed cumque? Laboriosam et praesentium quasi cumque in expedita. Asperiores,
+					accusamus facere.
+					Aperiam aspernatur nobis quisquam, mollitia a tempore dolore iusto maxime, cumque perferendis harum
+					temporibus officia quaerat sint, ullam rerum ipsa! Vero ipsa corporis quo! Labore impedit dolorum quo
+					sequi minima.
+					Provident corporis rem saepe consectetur? Perferendis iusto facilis ipsa? Rem, assumenda rerum numquam
+					placeat ipsum non vel mollitia? Ad debitis nostrum numquam blanditiis aliquid modi ut fuga a ducimus
+					quam.
+					Dignissimos sapiente commodi maxime dolorem voluptate, et quo molestias nulla distinctio eius
+					praesentium! Adipisci odio atque autem tempora quasi? Modi minima provident quasi explicabo, nam
+					doloribus tenetur consectetur autem repellendus.
+					Voluptatum explicabo laborum nulla veniam facilis ea praesentium mollitia esse repudiandae recusandae
+					fuga autem harum fugiat voluptates ex iure dolor molestiae ad, unde veritatis adipisci? Voluptas corporis
+					repudiandae voluptatum ratione?
+					Ullam nisi voluptatibus earum perferendis laudantium provident sequi eaque doloribus! Dolorum consectetur
+					quasi et illo voluptates dolor aut quaerat suscipit. Odio maiores expedita quis dolores possimus sint
+					asperiores corrupti voluptate?
+					Alias cupiditate hic aliquid, placeat sint facilis! Quo, assumenda et itaque quibusdam tenetur nam ut,
+					sapiente, voluptatibus eligendi consectetur enim fugit at alias libero fugiat facilis earum nesciunt?
+					Omnis, veritatis.
+					Eveniet distinctio dolore eius voluptatibus natus, et expedita error. Voluptatum recusandae quis non
+					molestias perspiciatis fugiat assumenda quasi quo, aut temporibus ad odit dolorum, incidunt quibusdam
+					corporis consequuntur numquam eius.
+					Natus nostrum dolore iusto. Nesciunt delectus sit omnis blanditiis cumque atque at quidem, doloribus
+					praesentium! Aliquam voluptatem sed ut ratione possimus suscipit et esse, amet fugit voluptatum ipsa odit
+					nesciunt!
+					Id laboriosam cumque suscipit quo repellat ut, sunt distinctio neque aspernatur accusamus fugiat
+					architecto quidem iusto quae consequatur placeat libero facere pariatur impedit deserunt laborum
+					obcaecati aliquam eius. Dolores, omnis.
+					Praesentium obcaecati aspernatur optio ipsum rem exercitationem quaerat, laboriosam aliquam illo quo iure
+					saepe ipsa doloremque nam! Tempora impedit iure culpa minus illo autem suscipit, consequatur corrupti
+					laudantium, quis sequi!
+					Ad, dolor deleniti. Velit cum omnis placeat. Eos natus atque consectetur accusantium, impedit error
+					tenetur eligendi, deleniti maxime tempora veritatis architecto provident, nobis exercitationem. Aliquam
+					iste reprehenderit incidunt asperiores labore?
+					Ratione, corporis esse a voluptates velit ipsam. Saepe voluptas corrupti beatae iure reprehenderit sed
+					labore fugit. Laborum hic nisi sapiente nemo, voluptatibus nulla sint consectetur exercitationem
+					reprehenderit totam laudantium soluta.</div>
+			</div>
 		</main>
 		<footer class="footer">
 			<div class="footer__container">
 			</div>
 		</footer>
 	</div>
-	<script src="js/app.min.js?_v=20230317153027"></script>
+	<script src="js/app.min.js?_v=20230319163746"></script>
 </body>
 
 </html>
