--- a/home.html
+++ b/home.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20230320230041">
+	<link rel="stylesheet" href="css/style.min.css?_v=20230321205114">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -44,7 +44,7 @@
 							<a href="+380979193134" class="action-header__phone">+380 (97) 919-31-34</a>
 							<a href="+380996113391" class="action-header__phone">+380 (99) 611-33-91</a>
 						</div>
-						<a href="#" class="action-header__cart _icon-cart"><span>5</span></a>
+						<a href="#" class="action-header__cart _icon-cart"><span>0</span></a>
 						<button type="button" class="menu__icon icon-menu"><span></span></button>
 					</div>
 				</div>
@@ -77,7 +77,7 @@
 			</section>
 			<section class="page__popular popular-page">
 				<div class="popular-page__container">
-					<h2 class="popular-page__title title title--big">Популярні товари</h2>
+					<h3 class="popular-page__title title title--big">Популярні товари</h3>
 					<div class="popular-page__row">
 
 						<div class="popular-page__card product-card _stock-in">
@@ -89,10 +89,10 @@
 									<div class="code-product__item">Код:</div>
 									<div class="code-product__value">ISS20301B</div>
 								</div>
-								<h3 class="product-card__name">
+								<h2 class="product-card__name">
 									<a href="#">Ліхтар габаритний діодний жовтий 24 V Ліхтар габаритний діодний жовтий 24 V (в-во
 										ISSIKSAN)</a>
-								</h3>
+								</h2>
 								<div class="product-card__info info ">
 									<ul class="info__availability availability">
 										<li class="availability__in-stock ">В наявності</li>
@@ -116,10 +116,10 @@
 									<div class="code-product__item">Код:</div>
 									<div class="code-product__value">ISS20301B</div>
 								</div>
-								<h3 class="product-card__name">
+								<h2 class="product-card__name">
 									<a href="#">Ліхтар габаритний діодний жовтий 24 V Ліхтар габаритний діодний жовтий 24 V (в-во
 										ISSIKSAN)</a>
-								</h3>
+								</h2>
 								<div class="product-card__info info ">
 									<ul class="info__availability availability">
 										<li class="availability__in-stock ">В наявності</li>
@@ -143,9 +143,9 @@
 									<div class="code-product__item">Код:</div>
 									<div class="code-product__value">ISS20301B</div>
 								</div>
-								<h3 class="product-card__name">
+								<h2 class="product-card__name">
 									<a href="#">Ліхтар габаритний діодний жовтий 24 V (в-во ISSIKSAN)</a>
-								</h3>
+								</h2>
 								<div class="product-card__info info ">
 									<ul class="info__availability availability">
 										<li class="availability__in-stock ">В наявності</li>
@@ -169,9 +169,35 @@
 									<div class="code-product__item">Код:</div>
 									<div class="code-product__value">ISS20301B</div>
 								</div>
-								<h3 class="product-card__name">
+								<h2 class="product-card__name">
 									<a href="#">Ліхтар габаритний діодний жовтий 24 V (в-во ISSIKSAN)</a>
-								</h3>
+								</h2>
+								<div class="product-card__info info ">
+									<ul class="info__availability availability">
+										<li class="availability__in-stock ">В наявності</li>
+										<li class="availability__out-stock ">Немає в наявності</li>
+									</ul>
+									<div class="info__price-block">
+										<div class="info__price">199 грн</div>
+										<button class="info__cart _icon-cart"></button>
+									</div>
+									<button class="info__order button">Замовити</button>
+								</div>
+							</div>
+						</div>
+
+						<div class="popular-page__card product-card _stock-in">
+							<div class="product-card__body">
+								<a href="#" class="product-card__image-ibg">
+									<picture><source srcset="img/Screenshot_2.webp" type="image/webp"><img src="img/Screenshot_2.jpg" alt="photo"></picture>
+								</a>
+								<div class="product-card__code code-product">
+									<div class="code-product__item">Код:</div>
+									<div class="code-product__value">ISS20301B</div>
+								</div>
+								<h2 class="product-card__name">
+									<a href="#">Ліхтар габаритний діодний жовтий 24 V (в-во ISSIKSAN)</a>
+								</h2>
 								<div class="product-card__info info ">
 									<ul class="info__availability availability">
 										<li class="availability__in-stock ">В наявності</li>
@@ -195,35 +221,9 @@
 									<div class="code-product__item">Код:</div>
 									<div class="code-product__value">ISS20301B</div>
 								</div>
-								<h3 class="product-card__name">
+								<h2 class="product-card__name">
 									<a href="#">Ліхтар габаритний діодний жовтий 24 V (в-во ISSIKSAN)</a>
-								</h3>
-								<div class="product-card__info info ">
-									<ul class="info__availability availability">
-										<li class="availability__in-stock ">В наявності</li>
-										<li class="availability__out-stock ">Немає в наявності</li>
-									</ul>
-									<div class="info__price-block">
-										<div class="info__price">199 грн</div>
-										<button class="info__cart _icon-cart"></button>
-									</div>
-									<button class="info__order button">Замовити</button>
-								</div>
-							</div>
-						</div>
-
-						<div class="popular-page__card product-card _stock-out">
-							<div class="product-card__body">
-								<a href="#" class="product-card__image-ibg">
-									<picture><source srcset="img/Screenshot_2.webp" type="image/webp"><img src="img/Screenshot_2.jpg" alt="photo"></picture>
-								</a>
-								<div class="product-card__code code-product">
-									<div class="code-product__item">Код:</div>
-									<div class="code-product__value">ISS20301B</div>
-								</div>
-								<h3 class="product-card__name">
-									<a href="#">Ліхтар габаритний діодний жовтий 24 V (в-во ISSIKSAN)</a>
-								</h3>
+								</h2>
 								<div class="product-card__info info ">
 									<ul class="info__availability availability">
 										<li class="availability__in-stock ">В наявності</li>
@@ -243,13 +243,84 @@
 						товари</button>
 				</div>
 			</section>
+			<section class="page__catalog catalog">
+				<div class="catalog__container">
+					<h3 class="catalog__title title title--big">Категорії товарів</h3>
+					<div class="catalog__category">
+
+						<a href="" class="catalog__card">
+							<div class="catalog__image-ibg">
+								<picture><source srcset="img/catalog/dvigun-palivna-sistema.webp" type="image/webp"><img src="img/catalog/dvigun-palivna-sistema.png" alt="image category"></picture>
+							</div>
+							<h4 class="catalog__name">Двигун, паливна система</h4>
+						</a>
+						<a href="" class="catalog__card">
+							<div class="catalog__image-ibg">
+								<picture><source srcset="img/catalog/Cooling.webp" type="image/webp"><img src="img/catalog/Cooling.jpg" alt="image category"></picture>
+							</div>
+							<h4 class="catalog__name">Система охолодження, опалення</h4>
+						</a>
+						<a href="" class="catalog__card">
+							<div class="catalog__image-ibg">
+								<picture><source srcset="img/catalog/transmision.webp" type="image/webp"><img src="img/catalog/transmision.jpg" alt="image category"></picture>
+							</div>
+							<h4 class="catalog__name">Трансмісія</h4>
+						</a>
+						<a href="" class="catalog__card">
+							<div class="catalog__image-ibg">
+								<picture><source srcset="img/catalog/pendant.webp" type="image/webp"><img src="img/catalog/pendant.jpg" alt="image category"></picture>
+							</div>
+							<h4 class="catalog__name">Підвіска</h4>
+						</a>
+						<a href="" class="catalog__card">
+							<div class="catalog__image-ibg">
+								<picture><source srcset="img/catalog/hub.webp" type="image/webp"><img src="img/catalog/hub.png" alt="image category"></picture>
+							</div>
+							<h4 class="catalog__name">Ходова частина</h4>
+						</a>
+						<a href="" class="catalog__card">
+							<div class="catalog__image-ibg">
+								<picture><source srcset="img/catalog/brakes2.webp" type="image/webp"><img src="img/catalog/brakes2.jpg" alt="image category"></picture>
+							</div>
+							<h4 class="catalog__name">Гальмівна, пневматична система</h4>
+						</a>
+						<a href="" class="catalog__card">
+							<div class="catalog__image-ibg">
+								<picture><source srcset="img/catalog/electro.webp" type="image/webp"><img src="img/catalog/electro.png" alt="image category"></picture>
+							</div>
+							<h4 class="catalog__name">Електрообладнання, освітлення</h4>
+						</a>
+						<a href="" class="catalog__card">
+							<div class="catalog__image-ibg">
+								<picture><source srcset="img/catalog/cab.webp" type="image/webp"><img src="img/catalog/cab.jpg" alt="image category"></picture>
+							</div>
+							<h4 class="catalog__name">Кабіна, підвіска, облицювання </h4>
+						</a>
+						<a href="" class="catalog__card">
+							<div class="catalog__image-ibg">
+								<picture><source srcset="img/catalog/caliper.webp" type="image/webp"><img src="img/catalog/caliper.png" alt="image category"></picture>
+							</div>
+							<h4 class="catalog__name">Супорти, ремкомплекти супортів </h4>
+						</a>
+						<a href="" class="catalog__card">
+							<div class="catalog__image-ibg">
+								<picture><source srcset="img/catalog/fitting.webp" type="image/webp"><img src="img/catalog/fitting.jpg" alt="image category"></picture>
+							</div>
+							<h4 class="catalog__name">З'єднувачі пневматичні </h4>
+						</a>
+
+
+					</div>
+					<button class="catalog__btn button button--border-blue _icon-arrow">Дивитися усі</button>
+				</div>
+			</section>
 		</main>
 		<footer class="footer">
 			<div class="footer__container">
 			</div>
 		</footer>
 	</div>
-	<script src="js/app.min.js?_v=20230320230041"></script>
+	<script src="js/app.min.js?_v=20230321205114"></script>
 </body>
 
 </html>
