--- a/home.html
+++ b/home.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20230321205114">
+	<link rel="stylesheet" href="css/style.min.css?_v=20230322133757">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -63,7 +63,7 @@
 			</div>
 		</header>
 		<main class="page">
-			<section class="page__main main">
+			<section data-watch data-watch-once data-watch-threshold="0.3" class="page__main main">
 				<div class="main__container">
 					<div class="main__image">
 						<picture><source srcset="img/main/main-photo.webp" type="image/webp"><img src="img/main/main-photo.jpg" alt="truck"></picture>
@@ -75,7 +75,7 @@
 					</div>
 				</div>
 			</section>
-			<section class="page__popular popular-page">
+			<section data-watch data-watch-once data-watch-threshold="0.3" class="page__popular popular-page">
 				<div class="popular-page__container">
 					<h3 class="popular-page__title title title--big">Популярні товари</h3>
 					<div class="popular-page__row">
@@ -204,7 +204,7 @@
 										<li class="availability__out-stock ">Немає в наявності</li>
 									</ul>
 									<div class="info__price-block">
-										<div class="info__price">199 грн</div>
+										<div class="info__price">10300 грн</div>
 										<button class="info__cart _icon-cart"></button>
 									</div>
 									<button class="info__order button">Замовити</button>
@@ -243,75 +243,132 @@
 						товари</button>
 				</div>
 			</section>
-			<section class="page__catalog catalog">
+			<section data-watch data-watch-once data-watch-threshold="0.3" class="page__catalog catalog ">
 				<div class="catalog__container">
 					<h3 class="catalog__title title title--big">Категорії товарів</h3>
 					<div class="catalog__category">
 
 						<a href="" class="catalog__card">
 							<div class="catalog__image-ibg">
-								<picture><source srcset="img/catalog/dvigun-palivna-sistema.webp" type="image/webp"><img src="img/catalog/dvigun-palivna-sistema.png" alt="image category"></picture>
+								<picture><source srcset="img/catalog/dvigun.webp" type="image/webp"><img src="img/catalog/dvigun.png" alt="image category"></picture>
 							</div>
 							<h4 class="catalog__name">Двигун, паливна система</h4>
+							<span></span>
 						</a>
 						<a href="" class="catalog__card">
 							<div class="catalog__image-ibg">
-								<picture><source srcset="img/catalog/Cooling.webp" type="image/webp"><img src="img/catalog/Cooling.jpg" alt="image category"></picture>
+								<picture><source srcset="img/catalog/сooling.webp" type="image/webp"><img src="img/catalog/сooling.jpg" alt="image category"></picture>
 							</div>
 							<h4 class="catalog__name">Система охолодження, опалення</h4>
+							<span></span>
 						</a>
 						<a href="" class="catalog__card">
 							<div class="catalog__image-ibg">
 								<picture><source srcset="img/catalog/transmision.webp" type="image/webp"><img src="img/catalog/transmision.jpg" alt="image category"></picture>
 							</div>
 							<h4 class="catalog__name">Трансмісія</h4>
+							<span></span>
 						</a>
 						<a href="" class="catalog__card">
 							<div class="catalog__image-ibg">
 								<picture><source srcset="img/catalog/pendant.webp" type="image/webp"><img src="img/catalog/pendant.jpg" alt="image category"></picture>
 							</div>
 							<h4 class="catalog__name">Підвіска</h4>
+							<span></span>
 						</a>
 						<a href="" class="catalog__card">
 							<div class="catalog__image-ibg">
 								<picture><source srcset="img/catalog/hub.webp" type="image/webp"><img src="img/catalog/hub.png" alt="image category"></picture>
 							</div>
 							<h4 class="catalog__name">Ходова частина</h4>
+							<span></span>
 						</a>
 						<a href="" class="catalog__card">
 							<div class="catalog__image-ibg">
 								<picture><source srcset="img/catalog/brakes2.webp" type="image/webp"><img src="img/catalog/brakes2.jpg" alt="image category"></picture>
 							</div>
 							<h4 class="catalog__name">Гальмівна, пневматична система</h4>
+							<span></span>
 						</a>
 						<a href="" class="catalog__card">
 							<div class="catalog__image-ibg">
 								<picture><source srcset="img/catalog/electro.webp" type="image/webp"><img src="img/catalog/electro.png" alt="image category"></picture>
 							</div>
 							<h4 class="catalog__name">Електрообладнання, освітлення</h4>
+							<span></span>
 						</a>
 						<a href="" class="catalog__card">
 							<div class="catalog__image-ibg">
 								<picture><source srcset="img/catalog/cab.webp" type="image/webp"><img src="img/catalog/cab.jpg" alt="image category"></picture>
 							</div>
 							<h4 class="catalog__name">Кабіна, підвіска, облицювання </h4>
+							<span></span>
 						</a>
 						<a href="" class="catalog__card">
 							<div class="catalog__image-ibg">
 								<picture><source srcset="img/catalog/caliper.webp" type="image/webp"><img src="img/catalog/caliper.png" alt="image category"></picture>
 							</div>
 							<h4 class="catalog__name">Супорти, ремкомплекти супортів </h4>
+							<span></span>
 						</a>
 						<a href="" class="catalog__card">
 							<div class="catalog__image-ibg">
 								<picture><source srcset="img/catalog/fitting.webp" type="image/webp"><img src="img/catalog/fitting.jpg" alt="image category"></picture>
 							</div>
 							<h4 class="catalog__name">З'єднувачі пневматичні </h4>
+							<span></span>
 						</a>
 
 
 					</div>
 					<button class="catalog__btn button button--border-blue _icon-arrow">Дивитися усі</button>
+				</div>
+			</section>
+			<section data-watch data-watch-once data-watch-threshold="0.3" class="page__selection selection">
+				<div class="selection__container">
+					<div class="selection__title title title--big-white">Підберемо запчастини за Вас</div>
+					<button class="selection__button button button--white-blue">Підібрати</button>
+					<div class="selection__info">Найточніший спосіб знайти потрібну запчастина - підбір по VIN-коду
+						автомобіля.
+						Це унікальний код, який містить в собі всю необхідну інформацію про транспортний засіб. Ви можете бути
+						впевнені за безпеку Ваших даних, ми не передаємо інформацію третім особам.</div>
+				</div>
+			</section>
+			<section data-watch data-watch-once data-watch-threshold="0.3" class="page__info-us info-us">
+				<div class="info-us__container">
+					<div class="info-us__item-card">
+						<div class="info-us__item"><span>13</span>років</div>
+						<div class="info-us__info">Досвіду на вітчизняному ринку запчастин.</div>
+					</div>
+					<div class="info-us__card">
+						<div class="info-us__image info-us__image--padding">
+							<img src="img/info-us/01.svg" alt="icon">
+						</div>
+						<div class="info-us__info">Пропонуємо понад 100000 деталей та комплектуючих від більше як 50
+							виробників Європи.
+						</div>
+					</div>
+					<div class="info-us__card">
+						<div class="info-us__image">
+							<img src="img/info-us/02.svg" alt="icon">
+						</div>
+						<div class="info-us__info">Доставляємо замовлення по Україні протягом 1-2 днів.
+						</div>
+					</div>
+					<div class="info-us__card">
+						<div class="info-us__image info-us__image--padding">
+							<img src="img/info-us/03.svg" alt="icon">
+						</div>
+						<div class="info-us__info">Діють гнучкі умови оплати, працюємо з ПДВ.
+						</div>
+					</div>
+					<div class="info-us__card">
+						<div class="info-us__image">
+							<img src="img/info-us/04.svg" alt="icon">
+						</div>
+						<div class="info-us__info">Надаємо гарантію на весь асортимент.
+						</div>
+					</div>
 				</div>
 			</section>
 		</main>
@@ -320,7 +377,7 @@
 			</div>
 		</footer>
 	</div>
-	<script src="js/app.min.js?_v=20230321205114"></script>
+	<script src="js/app.min.js?_v=20230322133757"></script>
 </body>
 
 </html>
