--- a/home.html
+++ b/home.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20230323142228">
+	<link rel="stylesheet" href="css/style.min.css?_v=20230323211458">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -424,7 +424,7 @@
 					</div>
 				</div>
 			</section>
-			<section class="page__response response">
+			<section data-watch data-watch-once data-watch-threshold="0.3" class=" page__response response">
 				<div class="response__container">
 					<div class="response__title title title--big">Останні відгуки</div>
 					<!-- Оболонка слайдера -->
@@ -432,54 +432,242 @@
 						<!-- Частина слайдера, що рухається -->
 						<div class="response__wrapper swiper-wrapper">
 							<!-- Слайд -->
-							<div class="response__slide card-response swiper-slide">
+							<div class="response__slide swiper-slide">
 								<div class="response__body body-response">
-									<div class="body-response__user">Покупець</div>
-									<div class="body-response__row">
-										<div class="body-response__ratinge"></div>
+									<div class="body-response__user _">Покупець</div>
+									<div class="body-response__item">
+										<div class="body-response__rating">
+											<ul>
+												<li>
+													<img src="img/response/star-gold.svg" alt="star">
+												</li>
+												<li>
+													<img src="img/response/star-gold.svg" alt="star">
+												</li>
+												<li>
+													<img src="img/response/star-gold.svg" alt="star">
+												</li>
+												<li>
+													<img src="img/response/star-gold.svg" alt="star">
+												</li>
+												<li>
+													<img src="img/response/star-gold.svg" alt="star">
+												</li>
+											</ul>
+										</div>
 										<div class="body-response__date">23.02.2023</div>
 									</div>
 									<div class="body-response__text">Товар прийшив швидко , був якісно запакований , та мав
+										досить приємну ціну порівнюючи з конкурентами. Задоволений покупкою :) Товар прийшив
+										швидко , був якісно запакований , та мав
 										досить приємну ціну порівнюючи з конкурентами. Задоволений покупкою :)</div>
 									<a href="#" class="body-response__product">Ліхтар габаритний діодний жовтий 24 V (в-во
 										ISSIKSAN)</a>
 									<ul class="body-response__comments">
 										<li class="body-response__comment">
-											<div class="body-response__emogi">
-												<picture><source data-srcset="img" srcset="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" type="image/webp"><img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII="  data-src="img" alt=""></picture>
+											<div class="body-response__emoji">
+												<img data-src="img/response/01.svg" alt="emoji icon">
 											</div>
 											<div class="body-response__caption">Гарне обслуговування</div>
 										</li>
 										<li class="body-response__comment">
-											<div class="body-response__emogi">
-												<picture><source data-srcset="img" srcset="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" type="image/webp"><img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII="  data-src="img" alt=""></picture>
+											<div class="body-response__emoji">
+												<img data-src="img/response/02.svg" alt="emoji icon">
 											</div>
 											<div class="body-response__caption">Актуальний опис</div>
 										</li>
 										<li class="body-response__comment">
-											<div class="body-response__emogi">
-												<picture><source data-srcset="img" srcset="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" type="image/webp"><img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII="  data-src="img" alt=""></picture>
+											<div class="body-response__emoji">
+												<img data-src="img/response/03.svg" alt="emoji icon">
 											</div>
 											<div class="body-response__caption">Швидко зв’язалися</div>
 										</li>
 										<li class="body-response__comment">
-											<div class="body-response__emogi">
-												<picture><source data-srcset="img" srcset="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" type="image/webp"><img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII="  data-src="img" alt=""></picture>
+											<div class="body-response__emoji">
+												<img data-src="img/response/04.svg" alt="emoji icon">
 											</div>
 											<div class="body-response__caption">Швидко відправили товар</div>
 										</li>
-
 									</ul>
 								</div>
 							</div>
+							<div class="response__slide swiper-slide">
+								<div class="response__body body-response">
+									<div class="body-response__user _">Покупець</div>
+									<div class="body-response__item">
+										<div class="body-response__rating">
+											<ul>
+												<li>
+													<img src="img/response/star-gold.svg" alt="star">
+												</li>
+												<li>
+													<img src="img/response/star-gold.svg" alt="star">
+												</li>
+												<li>
+													<img src="img/response/star-gold.svg" alt="star">
+												</li>
+												<li>
+													<img src="img/response/star-gold.svg" alt="star">
+												</li>
+												<li>
+													<img src="img/response/star-gold.svg" alt="star">
+												</li>
+											</ul>
+										</div>
+										<div class="body-response__date">23.02.2023</div>
+									</div>
+									<div class="body-response__text">Товар прийшив швидко , був якісно запакований , та мав
+										досить приємну ціну порівнюючи з конкурентами. Задоволений покупкою :) </div>
+									<a href="#" class="body-response__product">Ліхтар габаритний діодний жовтий 24 V (в-во
+										ISSIKSAN)</a>
+									<ul class="body-response__comments">
+										<li class="body-response__comment">
+											<div class="body-response__emoji">
+												<img data-src="img/response/01.svg" alt="emoji icon">
+											</div>
+											<div class="body-response__caption">Гарне обслуговування</div>
+										</li>
+										<li class="body-response__comment">
+											<div class="body-response__emoji">
+												<img data-src="img/response/02.svg" alt="emoji icon">
+											</div>
+											<div class="body-response__caption">Актуальний опис</div>
+										</li>
+										<li class="body-response__comment">
+											<div class="body-response__emoji">
+												<img data-src="img/response/03.svg" alt="emoji icon">
+											</div>
+											<div class="body-response__caption">Швидко зв’язалися</div>
+										</li>
+										<li class="body-response__comment">
+											<div class="body-response__emoji">
+												<img data-src="img/response/04.svg" alt="emoji icon">
+											</div>
+											<div class="body-response__caption">Швидко відправили товар</div>
+										</li>
+									</ul>
+								</div>
+							</div>
+							<div class="response__slide swiper-slide">
+								<div class="response__body body-response">
+									<div class="body-response__user _">Покупець</div>
+									<div class="body-response__item">
+										<div class="body-response__rating">
+											<ul>
+												<li>
+													<img src="img/response/star-gold.svg" alt="star">
+												</li>
+												<li>
+													<img src="img/response/star-gold.svg" alt="star">
+												</li>
+												<li>
+													<img src="img/response/star-gold.svg" alt="star">
+												</li>
+												<li>
+													<img src="img/response/star-gold.svg" alt="star">
+												</li>
+												<li>
+													<img src="img/response/star-grey.svg" alt="star">
+												</li>
+											</ul>
+										</div>
+										<div class="body-response__date">23.02.2023</div>
+									</div>
+									<div class="body-response__text"></div>
+									<a href="#" class="body-response__product">Ліхтар габаритний діодний жовтий 24 V (в-во
+										ISSIKSAN)</a>
+									<ul class="body-response__comments">
+										<li class="body-response__comment">
+											<div class="body-response__emoji">
+												<img data-src="img/response/01.svg" alt="emoji icon">
+											</div>
+											<div class="body-response__caption">Гарне обслуговування</div>
+										</li>
+										<li class="body-response__comment">
+											<div class="body-response__emoji">
+												<img data-src="img/response/02.svg" alt="emoji icon">
+											</div>
+											<div class="body-response__caption">Актуальний опис</div>
+										</li>
+										<li class="body-response__comment">
+											<div class="body-response__emoji">
+												<img data-src="img/response/03.svg" alt="emoji icon">
+											</div>
+											<div class="body-response__caption">Швидко зв’язалися</div>
+										</li>
+										<li class="body-response__comment">
+											<div class="body-response__emoji">
+												<img data-src="img/response/04.svg" alt="emoji icon">
+											</div>
+											<div class="body-response__caption">Швидко відправили товар</div>
+										</li>
+									</ul>
+								</div>
+							</div>
+							<div class="response__slide swiper-slide">
+								<div class="response__body body-response">
+									<div class="body-response__user _">Покупець</div>
+									<div class="body-response__item">
+										<div class="body-response__rating">
+											<ul>
+												<li>
+													<img src="img/response/star-gold.svg" alt="star">
+												</li>
+												<li>
+													<img src="img/response/star-gold.svg" alt="star">
+												</li>
+												<li>
+													<img src="img/response/star-gold.svg" alt="star">
+												</li>
+												<li>
+													<img src="img/response/star-gold.svg" alt="star">
+												</li>
+												<li>
+													<img src="img/response/star-grey.svg" alt="star">
+												</li>
+											</ul>
+										</div>
+										<div class="body-response__date">23.02.2023</div>
+									</div>
+									<div class="body-response__text">Товар прийшив швидко , був якісно запакований , та мав
+										досить приємну ціну порівнюючи з конкурентами. Задоволений покупкою :) </div>
+									<a href="#" class="body-response__product">Ліхтар габаритний діодний жовтий 24 V (в-во
+										ISSIKSAN)</a>
+									<ul class="body-response__comments">
+										<li class="body-response__comment">
+											<div class="body-response__emoji">
+												<img data-src="img/response/01.svg" alt="emoji icon">
+											</div>
+											<div class="body-response__caption">Гарне обслуговування</div>
+										</li>
+										<li class="body-response__comment">
+											<div class="body-response__emoji">
+												<img data-src="img/response/02.svg" alt="emoji icon">
+											</div>
+											<div class="body-response__caption">Актуальний опис</div>
+										</li>
+										<li class="body-response__comment">
+											<div class="body-response__emoji">
+												<img data-src="img/response/03.svg" alt="emoji icon">
+											</div>
+											<div class="body-response__caption">Швидко зв’язалися</div>
+										</li>
+										<li class="body-response__comment">
+											<div class="body-response__emoji">
+												<img data-src="img/response/04.svg" alt="emoji icon">
+											</div>
+											<div class="body-response__caption">Швидко відправили товар</div>
+										</li>
+									</ul>
+								</div>
+							</div>
+
+
 						</div>
-						<!-- Якщо потрібна пагінація -->
-						<div class="swiper-pagination"></div>
-						<!-- Якщо потрібна навігація (ліворуч/праворуч) -->
-						<button type="button" class="body-response__prev swiper-arrow-prev swiper-button-prev _icon-arrow"></button>
-						<button type="button" class="body-response__next swiper-arrow-next swiper-button-next _icon-arrow"></button>
-						<!-- Якщо потрібен скролбар -->
-						<div class="swiper-scrollbar"></div>
+					</div>
+					<div class="response__arrows">
+						<button type="button" class="response__prev arrow _icon-arrow"></button>
+						<button type="button" class="response__next arrow _icon-arrow"></button>
 					</div>
 				</div>
 			</section>
@@ -489,7 +677,7 @@
 			</div>
 		</footer>
 	</div>
-	<script src="js/app.min.js?_v=20230323142228"></script>
+	<script src="js/app.min.js?_v=20230323211458"></script>
 </body>
 
 </html>
